Adding initial revision of sDashboard V2.0 (aka 'Salt&Pepper')
Features Added
++++++++++++++++++++++++++++

1) Replaced Flot Charts with Flotr2 charting library
2) Fixed the maximize issue, the widget now maximize to full screen
3) Added code to dispatch sorted widget definitions array when widget
are rearranged
4) Added example to add an exisiting dom element as a widget by passing
in the element using a jquery selector.
5) Added examples for bar,line,pie, and bubble charts. All charts
supported be flot charts are support by the dashboard framwork now
6) Fixed the issue which resizing of chart widgets, earlier we were
maintaining two version of chart, one in minimized state and one in
maximized state and we were toggling between it when maximized or
minimized. This release fix that issue and make its much simpler buy
just redrawing the chart again.

Low level code changes:
7) Refactored unsed css
8)Removed isADonut option on widget definition as its not longer
supported as we switched to flort2 chart
9) Add new options for widget definitions
10) Instead of have a chart type = bar, pie, line etc.. refactored the
code to be more generic, i.e. if we want to render a chart set the
widgetType to chart and based on the options passed, the chart will be
rendered accordingly.

--- a/sDashboard.css
+++ b/sDashboard.css
@@ -1,5 +1,5 @@
 /*
- * jquery sDashboard (1.0)
+ * jquery sDashboard (2.0)
  * Copyright 2012, Nikhilesh Katakam
  * Distributed under MIT license.
  * https://github.com/niki4810/sDashboard
@@ -62,14 +62,14 @@
 }
 
 .sDashboardWidgetContainerMaximized {
-	z-index: 1;
+	z-index: 9999;
 	margin: 0.3em;
 	padding: 0.4em;
-	width: 800px;
-	height: 560px;
-	position: fixed;
+	width : 98%;
+	height : 100%;
+	left : 0px;
 	top: 0px;
-	left: 20%;
+	position: fixed;
 }
 
 .sDashboardWidgetContent tr:hover {
@@ -86,44 +86,20 @@
 
 /*dashboard chart view css*/
 .sDashboardChart {
-	width: 200px;
-	height: 180px;
-	cursor : pointer;
-}
-/*pie chart */
-.sDashboardPieChartMinimized {
-	width: 200px;
-	height: 180px;
-	margin-left: 20%;
-}
-
-.sDashboardPieChartMaximized {
-	width: 640px;
-	height: 480px;
-	margin-left: 10%;
-}
-/*bar chart*/
-.sDashboardBarChartMinimized {
+	/*	width: 200px;
+	 height: 180px;*/
 	width: 100%;
-	height: 100%;
+	height: 95%;
+/*	cursor: pointer;*/
 }
 
-.sDashboardBarChartMaximized {
-	width: 640px;
-	height: 480px;
+.sDashboardChartClickable{
+	cursor: pointer;
 }
-
-/*line chart*/
-.sDashboardLineChartMinimized {
+.sDashboardChartSelectable{
 	width: 100%;
-	height: 100%;
-	cursor : crosshair;
-}
-
-.sDashboardLineChartMaximized {
-	width: 640px;
-	height: 480px;
-	cursor : crosshair;
+	height: 95%;
+	cursor: crosshair;
 }
 
 
